[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/LilitaOne.tres" type="DynamicFont" id=1]
[ext_resource path="res://prefabs/UI/BaseSignalButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/components/popup/Popup_Frame3.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/LilitaOne-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/themes/LineEditWithIcon.tres" type="StyleBox" id=5]
[ext_resource path="res://scripts/UI/elements/SignupPopup.gd" type="Script" id=6]
[ext_resource path="res://assets/ui/icons/IconPassword.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/icons/IconPerson.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 4 )

[node name="SignupPopup" type="Popup"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -392.0
margin_right = 320.0
margin_bottom = 352.0
script = ExtResource( 6 )

[node name="PopupTexture" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 31
patch_margin_right = 20
patch_margin_bottom = 43

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -102.0
margin_top = 24.0
margin_right = 102.0
margin_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
text = "SIGNUP"
align = 1
valign = 1

[node name="LabelsContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -271.0
margin_top = 112.0
margin_right = 271.0
margin_bottom = 350.0
custom_constants/separation = 30

[node name="Username" type="LineEdit" parent="LabelsContainer"]
margin_right = 542.0
margin_bottom = 104.0
rect_min_size = Vector2( 542, 104 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/minimum_spaces = 8
custom_fonts/font = SubResource( 2 )
custom_styles/normal = ExtResource( 5 )
context_menu_enabled = false
placeholder_text = "Username"

[node name="Icon" type="TextureRect" parent="LabelsContainer/Username"]
modulate = Color( 0, 0.52549, 1, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -31.5
margin_right = 76.0
margin_bottom = 31.5
texture = ExtResource( 8 )

[node name="Password" type="LineEdit" parent="LabelsContainer"]
margin_top = 134.0
margin_right = 542.0
margin_bottom = 238.0
rect_min_size = Vector2( 542, 104 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/minimum_spaces = 8
custom_fonts/font = SubResource( 2 )
custom_styles/normal = ExtResource( 5 )
secret = true
context_menu_enabled = false
placeholder_text = "Password"

[node name="Icon" type="TextureRect" parent="LabelsContainer/Password"]
modulate = Color( 0, 0.52549, 1, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -34.0
margin_right = 82.0
margin_bottom = 34.0
texture = ExtResource( 7 )

[node name="Password2" type="LineEdit" parent="LabelsContainer"]
margin_top = 268.0
margin_right = 542.0
margin_bottom = 372.0
rect_min_size = Vector2( 542, 104 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/minimum_spaces = 8
custom_fonts/font = SubResource( 2 )
custom_styles/normal = ExtResource( 5 )
secret = true
context_menu_enabled = false
placeholder_text = "Repeat your Password"

[node name="Icon" type="TextureRect" parent="LabelsContainer/Password2"]
modulate = Color( 0, 0.52549, 1, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -34.0
margin_right = 82.0
margin_bottom = 34.0
texture = ExtResource( 7 )

[node name="SignupButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -251.0
margin_top = -224.0
margin_right = 251.0
margin_bottom = -128.0

[node name="SignupLabel" type="Label" parent="SignupButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = -19.0
margin_right = 45.5
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 1 )
text = "SIGN UP"
align = 1
valign = 1

[node name="InfoLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -232.0
margin_top = -94.0
margin_right = 232.0
margin_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 3 )
text = "Tap outside this popup, to close it!"
align = 1
valign = 1

[node name="SignupRequest" type="HTTPRequest" parent="."]
